Bug 1202665 - Recognize "contructor"() methods as class constructors. (r=Waldo)